chore: fix handlebars brackets

--- a/renovate.json
+++ b/renovate.json
@@ -9,8 +9,8 @@
          "# renovate: datasource=(?<datasource>.*) depName=(?<depName>.*) version=(?<currentVersion>.*)\n.*source.*\\?ref=(?<currentValue>.*)\""
       ],
       "autoReplaceStringTemplate": "\\s*source\\s*=.*ref={{{currentDigest}}}\"",
-      "datasourceTemplate": "{{if datasource}}{{datasource}}{{else}}github-tags{{/if}}",
-      "versioningTemplate": "{{#if version}}{{version}}{{else}}loose{{/if}}"
+      "datasourceTemplate": "{{#if datasource}}{{{datasource}}}{{else}}github-tags{{/if}}",
+      "versioningTemplate": "{{#if versioning}}{{{versioning}}}{{else}}loose{{/if}}"
     }
   ]
 }
