--- a/renovate.json
+++ b/renovate.json
@@ -6,7 +6,7 @@
       "description": "Search all .tf (terraform) files for a comment above source to determine how to lookup the tag to replace with the latest sha.",
       "fileMatch": ["\\.tf$"],
       "matchStrings": [
-         "#\\srenovate:\\sversion=(?<currentVersion>[^\n]*)\\n\\s*source.*?:(?<depName>[^\n]*)\\.git\\?ref=(?<currentValue>[^\"]*)\""
+         "#\\srenovate:\\sversion=(?<currentVersion>[^\n]*)\\n\\s*source.*?:(?<depName>[^\n]*)\\.git\\?ref=(?<currentValue>[^/\"]*)\""
       ],
       "autoReplaceStringTemplate": "\\s*source\\s*=.*ref={{{currentDigest}}}\"",
       "datasourceTemplate": "{{#if datasource}}{{{datasource}}}{{else}}github-tags{{/if}}",
