--- a/renovate.json
+++ b/renovate.json
@@ -8,7 +8,7 @@
       "matchStrings": [
          "#\\srenovate:\\sversion=(?<currentVersion>[^\n]*)\\n\\s*source.*?:(?<depName>[^\n]*)\\.git\\?ref=(?<currentValue>[^/\"]*)\""
       ],
-      "autoReplaceStringTemplate": "\\s*source.*\\?ref={{{replace currentValue newDigest}}}\"",
+      "autoReplaceStringTemplate": "\\s*source.*\\?ref={{{newDigest}}}\"",
       "datasourceTemplate": "{{#if datasource}}{{{datasource}}}{{else}}github-tags{{/if}}",
       "versioningTemplate": "{{#if versioning}}{{{versioning}}}{{else}}loose{{/if}}"
     }
