--- a/renovate.json
+++ b/renovate.json
@@ -6,9 +6,9 @@
       "description": "Search all .tf (terraform) files for a comment above source to determine how to lookup the tag to replace with the latest sha.",
       "fileMatch": ["\\.tf$"],
       "matchStrings": [
-         "#\\srenovate:\\sversion=(?<currentVersion>[^\n]*)\\n\\s*source.*?:(?<depName>[^\n]*)\\.git\\?ref=(?<currentValue>[^/\"]*)\""
+         "#\\srenovate:\\sversion=(?<currentValue>[^\n]*)\\n\\s*source.*?:(?<depName>[^\n]*)\\.git\\?ref=(?<currentVersion>[^/\"]*)\""
       ],
-      "autoReplaceStringTemplate": "\\s*source.*\\?ref={{{newDigest}}}\"",
+      "autoReplaceStringTemplate": "\\s*source.*ref={{{newDigest}}}\"",
       "datasourceTemplate": "{{#if datasource}}{{{datasource}}}{{else}}github-tags{{/if}}",
       "versioningTemplate": "{{#if versioning}}{{{versioning}}}{{else}}loose{{/if}}"
     }
