typo: remove extra comma in renovate

--- a/renovate.json
+++ b/renovate.json
@@ -16,7 +16,7 @@
   "packageRules": [
     {
       "matchManagers": ["regex"],
-      "matchDatasources": ["github-tags"],
+      "matchDatasources": ["github-tags"]
     }
   ]
 }
