chore: get renovate to make one pr

--- a/renovate.json
+++ b/renovate.json
@@ -15,8 +15,7 @@
   ],
   "packageRules": [
     {
-      "matchManagers": ["regex"],
-      "matchDatasources": ["github-tags"]
+      "matchFileNames": ["main.tf"]
     }
   ]
 }
