chore: try autoreplace

--- a/renovate.json
+++ b/renovate.json
@@ -10,7 +10,8 @@
          "#\\srenovate:\\sversion=(?<currentValue>[^\n]*)\\n\\s*source.*?:(?<depName>[^\n]*)\\.git\\?ref=(?<currentDigest>[^/\"]*)\""
       ],
       "datasourceTemplate": "{{#if datasource}}{{{datasource}}}{{else}}github-tags{{/if}}",
-      "versioningTemplate": "{{#if versioning}}{{{versioning}}}{{else}}loose{{/if}}"
+      "versioningTemplate": "{{#if versioning}}{{{versioning}}}{{else}}loose{{/if}}",
+      "autoReplaceStringTemplate": "source = git@github.com:{{{depName}}}.git?ref={{{newDigest}}"
     }
   ],
   "packageRules": [
