--- a/renovate.json
+++ b/renovate.json
@@ -1,5 +1,8 @@
 {
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
+  "extends": [
+    "config:base"
+  ],
   "enabledManagers": ["regex"],
   "regexManagers": [
     {
@@ -11,7 +14,7 @@
       ],
       "datasourceTemplate": "{{#if datasource}}{{{datasource}}}{{else}}github-tags{{/if}}",
       "versioningTemplate": "{{#if versioning}}{{{versioning}}}{{else}}loose{{/if}}",
-      "autoReplaceStringTemplate": "source = git@github.com:{{{depName}}}.git?ref={{{newDigest}}"
+      "autoReplaceStringTemplate": "source = git@github.com:{{{depName}}}.git?ref={{{newDigest}}}"
     }
   ],
   "packageRules": [
