--- a/renovate.json
+++ b/renovate.json
@@ -9,12 +9,11 @@
       "description": "Search all .tf (terraform) files for a comment above source to determine how to lookup the tag to replace with the latest sha.",
       "fileMatch": ["main.tf"],
       "matchStrings": [
-         "#\\srenovate:\\sversion=(?<currentValue>[^\n]*)\\n\\s*source.*?:(?<depName>[^\n]*)\\.git\\?ref=(?<currentVersion>v[^/\"]*)\"",
-         "#\\srenovate:\\sversion=(?<currentValue>[^\n]*)\\n\\s*source.*?:(?<depName>[^\n]*)\\.git\\?ref=(?<currentDigest>[^/\"]*)\""
+         "#\\srenovate:\\sversion=(?<currentValue>[^\n]*)\\n\\s{2}(?<fooBar>source.*?):(?<depName>[^\n]*)\\.git\\?ref=(?<currentVersion>v[^/\"]*)\""
       ],
       "datasourceTemplate": "{{#if datasource}}{{{datasource}}}{{else}}github-tags{{/if}}",
       "versioningTemplate": "{{#if versioning}}{{{versioning}}}{{else}}loose{{/if}}",
-      "autoReplaceStringTemplate": "{{{replace currentValue currentDigest currentVersion}}}"
+      "autoReplaceStringTemplate": "{{{fooBar}}}:{{{depName}}}.git?ref={{{newDigest}}}"
     }
   ],
   "packageRules": [
