--- a/renovate.json
+++ b/renovate.json
@@ -11,7 +11,7 @@
       "matchStrings": [
          "#\\srenovate:\\sversion=(?<currentValue>[^\n]*)\\n\\s{2}source.*?:(?<depName>[^\n]*)\\.git\\?ref=(?<currentDigest>[^/\"]*)\""
       ],
-      "datasourceTemplate": "{{#if datasource}}{{{datasource}}}{{else}}github-refs{{/if}}",
+      "datasourceTemplate": "{{#if datasource}}{{{datasource}}}{{else}}git-refs{{/if}}",
       "versioningTemplate": "{{#if versioning}}{{{versioning}}}{{else}}loose{{/if}}"
     }
   ],
