--- a/renovate.json
+++ b/renovate.json
@@ -13,7 +13,7 @@
       ],
       "datasourceTemplate": "{{#if datasource}}{{{datasource}}}{{else}}git-refs{{/if}}",
       "versioningTemplate": "{{#if versioning}}{{{versioning}}}{{else}}loose{{/if}}",
-      "packageNameTemplate": "https://github.com/{{{depName}}}"
+      "packageNameTemplate": "https://github.com/{{{depName}}}",
       "autoReplaceStringTemplate": "{{{sourceString}}}:{{{depName}}}.git?ref={{{newDigest}}}\""
     }
   ],
